feat: add domain and rest crud subjects
